gccida/c0/check_asm_stack_operands
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1085:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)insn[2]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1093:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_outputs = recog_data_0.n_operands - n_inputs; 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1096:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1098:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 63 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1099:35: error: use of undeclared identifier 'recog_data_0'
&& ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i]->fld[0].rtwint == 61 ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1101:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = recog_data_0.operand[i]->fld[0].rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1101:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[i] = recog_data_0.operand[i]->fld[0].rtx; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1124:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 61 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1125:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint >= 8u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1126:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint <= 0xFu ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1132:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand[i]->fld[0].rtint == clobber_reg[j]->fld[0].rtint ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1144:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
reg_used_as_output[recog_data_0.operand[i]->fld[0].rtuint] = 1; 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1165:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[i] == 61 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1166:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint >= 8u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1167:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[i]->fld[0].rtint <= 0xFu ) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1169:73: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( j_0 = 0; j_0 < n_clobbers && !operands_match_p( clobber_reg[j_0], recog_data_0.operand[i]); ++j_0 ) 
                                                                        ^~~~~~~~~~~~
                                                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1172:17: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
implicitly_dies[recog_data_0.operand[i]->fld[0].rtuint] = 1; 
                ^~~~~~~~~~~~
                recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1190:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( operands_match_p( recog_data_0.operand[j_1], recog_data_0.operand[i]) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/reg-stack.c:1190:51: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( operands_match_p( recog_data_0.operand[j_1], recog_data_0.operand[i]) ) 
                                                  ^~~~~~~~~~~~
                                                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_asm_stack_operands/src/obj/reg-stack.o] Error 1
